--- a/modeling2324/zakl/1matmod.ipynb
+++ b/modeling2324/zakl/1matmod.ipynb
@@ -347,8 +347,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Найденные параметры: [1.87033872e+02 7.26065722e+08]\n",
-      "Минимальная ошибка: 340.84166044901406\n"
+      "Найденные параметры: [215.29603648 139.46112579]\n",
+      "Минимальная ошибка: 15.623774738073516\n"
      ]
     }
    ],
@@ -371,7 +371,7 @@
     "\n",
     "# ============ МИНИМИЗАЦИЯ ============\n",
     "# init_guess = [90, 300]\n",
-    "init_guess = [df[\"X\"].min(), df[\"Y\"].max()]\n",
+    "init_guess = [df[\"X\"].max(), df[\"Y\"].max()]\n",
     "\n",
     "result = minimize(\n",
     "    error_function, \n",
@@ -395,14 +395,6 @@
     "print(f\"Найденные параметры: {result.x}\")\n",
     "print(f\"Минимальная ошибка: {result.fun}\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "dd0a8b1b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -491,14 +483,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 100/100 [00:04<00:00, 21.61it/s]"
+      "100%|██████████| 100/100 [00:04<00:00, 20.84it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Лучший параметр: 215.35353535353536 139.3939393939394 15.624095474789488\n"
+      "Лучший параметр: 215.15151515151516 139.3939393939394 15.625108441890161\n"
      ]
     },
     {
@@ -513,8 +505,9 @@
     "import numpy as np\n",
     "\n",
     "# Диапазон параметров\n",
-    "a_values = np.linspace(210, 220, 100)\n",
-    "b_values = np.linspace(120, 140, 100)\n",
+    "a_values = np.linspace(0, 300, 100)\n",
+    "b_values = np.linspace(0, 300, 100)\n",
+    "\n",
     "best_error = float('inf')\n",
     "best_a = None\n",
     "best_b = None\n",
